updated wrangler related code

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "node ./scripts/dev.cjs && remix vite:dev",
+    "start": "wrangler pages dev ./build/client",
     "postinstall": "node ./scripts/draco.cjs",
-    "dev:storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build"
+    "deploy": "npm run build && wrangler pages deploy ./build/client --project-name portfoliooo"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.515.0",
